--- a/main.tex
+++ b/main.tex
@@ -239,12 +239,14 @@
     \input{Sections/3_Results_Nanoparticles/SXRDNanoparticles}
     \input{Sections/3_Results_Nanoparticles/BCDITempRamp}
     \input{Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia}
+    \input{Sections/3_Results_Nanoparticles/Conclusion}
 
 % Results SXRD
     \chapter{Structural and chemical evolution of single Pt facets during the oxidation of ammonia}
     \input{Sections/4_Results_SingleCrystals/Introduction}
     \input{Sections/4_Results_SingleCrystals/111}
     \input{Sections/4_Results_SingleCrystals/100}
+    \input{Sections/4_Results_SingleCrystals/Conclusion}
 
 % Conclusion
 %     \chapter{Conclusion}
